find_package(PkgConfig QUIET)
if (PkgConfig_FOUND)
    pkg_check_modules(libevdev IMPORTED_TARGET libevdev)
endif ()

if (PkgConfig_FOUND AND libevdev_FOUND)
    file(GLOB_RECURSE src *.cpp)
    add_executable(libevdev_mouse ${src})
    target_link_libraries(libevdev_mouse usbipdcpp_virtual_device PkgConfig::libevdev cxxopts::cxxopts)
    target_include_directories(libevdev_mouse PRIVATE . include)
else ()
    message(WARNING "libevdev or PkgConfig not found, skipping libevdev_mouse")
endif ()
